# PosSemestralnaPraca

./: .gitignore  README.md  client.c  dice.c  dice.h  enums.c  enums.h  game  game.c  game.h  main.c  names.h  pipe.c  player.c  player.h  server.c  server.h  shm.c  shm.h  shop.c  shop.h  syn_game.c  syn_game.h
comunicationProcesses/: CMakeLists.txt  client.c  client.h  dice.c  dice.h  enums.c  enums.h  game.c  game.h  main.c  names.h  pipe.h  player.c  player.h  server.c  server.h  shm.c  shm.h  shop.c  syn_game.c  syn_game.h
